; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/beri/extr_beri_iommu.c_beri_iommu_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/beri/extr_beri_iommu.c_beri_iommu_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdma_iommu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.beri_iommu_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.xdma_iommu*)* @beri_iommu_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @beri_iommu_init(i32 %0, %struct.xdma_iommu* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xdma_iommu*, align 8
  %5 = alloca %struct.beri_iommu_softc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.xdma_iommu* %1, %struct.xdma_iommu** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.beri_iommu_softc* @device_get_softc(i32 %6)
  store %struct.beri_iommu_softc* %7, %struct.beri_iommu_softc** %5, align 8
  %8 = load %struct.beri_iommu_softc*, %struct.beri_iommu_softc** %5, align 8
  %9 = load %struct.xdma_iommu*, %struct.xdma_iommu** %4, align 8
  %10 = getelementptr inbounds %struct.xdma_iommu, %struct.xdma_iommu* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @beri_iommu_set_base(%struct.beri_iommu_softc* %8, i64 %12)
  ret i32 0
}

declare dso_local %struct.beri_iommu_softc* @device_get_softc(i32) #1

declare dso_local i32 @beri_iommu_set_base(%struct.beri_iommu_softc*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
